Fixed contact-input text area to have more padding and align to the left

--- a/style.css
+++ b/style.css
@@ -253,8 +253,10 @@ table {
   background-color: #dedede;
 }
 
-textarea {
+.textarea {
+  padding: 10px;
   resize: none;
+  text-align: left;
 }
 
 #contact-submit {
